controller/src/main/java/com/example/demo/error/ApiInnerError.java
package com.example.demo.error;

abstract class ApiInnerError {

}
